--- a/Alpine/PowerDNS/roles/alpine_powerdns/templates/pdns.postgresql.conf.j2
+++ b/Alpine/PowerDNS/roles/alpine_powerdns/templates/pdns.postgresql.conf.j2
@@ -3,7 +3,8 @@ config-dir=/etc
 daemon=yes
 distributor-threads=1
 guardian=yes
-local-port=53
+local-address={{ pdns_auth_listen_addr }}
+local-port={{ pdns_auth_listen_port }}
 loglevel=3
 module-dir=/usr/lib/pdns/pdns
 negquery-cache-ttl=60
@@ -13,7 +14,7 @@ socket-dir=/var/run
 webserver=no
 
 launch=gpgsql
-gpgsql-host=127.0.0.1
+gpgsql-host={{ pg_listen_addr }}
 gpgsql-user={{ pg_db_user }}
 gpgsql-dbname={{ pg_db_name }}
 gpgsql-password={{ pg_db_pass }}
