log file location fix

--- a/Alpine/Elasticsearch/roles/alpine_elasticsearch/templates/elasticsearch.yml.j2
+++ b/Alpine/Elasticsearch/roles/alpine_elasticsearch/templates/elasticsearch.yml.j2
@@ -1,3 +1,5 @@
+path:
+  logs: /var/log/elasticsearch
 network.host: {{ es_listen_addr }}
 node.name: {{ ansible_hostname }}
 cluster.name: {{ es_cluster_name }}
