--- a/Alpine/Filebeat/roles/alpine_filebeat/templates/filebeat.yml.j2
+++ b/Alpine/Filebeat/roles/alpine_filebeat/templates/filebeat.yml.j2
@@ -15,4 +15,5 @@ filebeat.prospectors:
 output.elasticsearch:
   hosts: ["{{ ship_addr}}:{{ ship_port }}"]
 
-
+setup.kibana:
+  host: "{{ kibana_addr }}:{{ kibana_port }}"
