--- a/Alpine/Packetbeat/roles/alpine_packetbeat/templates/packetbeat.yml.j2
+++ b/Alpine/Packetbeat/roles/alpine_packetbeat/templates/packetbeat.yml.j2
@@ -14,5 +14,9 @@ packetbeat.flows:
 
 output.elasticsearch:
   hosts: ["{{ ship_addr}}:{{ ship_port }}"]
+  
+setup.kibana:
+  host: "{{ kibana_addr }}:{{ kibana_port }}"
+
 
 
